Constructors are private and new factory method